# steam-cli

./: Cargo.toml  README.md
.skill/: SKILL.md
assets/: steam.db  tags.popular.en.json
src/: cli.rs  error.rs  main.rs  models.rs  output.rs  steam.rs  store.rs
