[package]
name = "steam-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "steam-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
rusqlite = { version = "0.33.0", features = ["bundled"] }
thiserror = "2.0.12"
scraper = "0.23.1"
regex = "1.11.1"
dirs = "6.0.0"
url = "2.5.4"
